# ai-app-py-only

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
examples/: .env.example
examples/app/: llm.py  streamlit_app.py
examples/evals/: metrics.py
simple_chatbot/app/: llm.py
simple_chatbot/evals/: metrics.py
simple_rag_chatbot/app/: llm.py  streamlit_app.py
simple_rag_chatbot/evals/: metrics.py
